minor bug fixed

--- a/LogTagger.html
+++ b/LogTagger.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>MapTool Log Tagger v0.2.2.130128_Beta</title>
+    <title>MapTool Log Tagger v0.3.1.130206_Beta</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.1.1.min.css" />
@@ -22,7 +22,7 @@
         </div>
         <div data-role="content">
             <div data-role="fieldcontain">
-                <label for="delete_irrelevant">Delete Irrelevant Chat</label>
+                <label for="delete_irrelevant">Delete Irrelevant Chat (Lines Start With a Bracket)</label>
                 <input type="checkbox" name="delete_irrelevant" id="delete_irrelevant" />
             </div>
             <div data-role="fieldcontain">
@@ -43,7 +43,7 @@
         </div>
         <div data-role="content">
             <div id="color_selector" data-role="fieldcontain">
-                <h3>Pick color for everyone</h3>
+                <h3>Colors will be kept unchanged as they are in Maptool if you don't change them below</h3>
             </div>
         </div>
     </div>
