--- a/LogTagger.html
+++ b/LogTagger.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>MapTool Log Tagger v0.3.1.130206_Beta</title>
+    <title>MapTool Log Tagger v0.3.2.130207_Beta</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.1.1.min.css" />
@@ -43,7 +43,9 @@
         </div>
         <div data-role="content">
             <div id="color_selector" data-role="fieldcontain">
-                <h3>Colors will be kept unchanged as they are in Maptool if you don't change them below</h3>
+                <h3>Pick color for every character</h3>
+                <h5>Colors will be kept unchanged as they are in Maptool if you don't change them below</h5>
+                <h5>Ignore certain character by selecting "ignore this character"</h5>
             </div>
         </div>
     </div>
